# kelp-nexus

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/app/: main.py  settings.py
apps/api/app/core/: azure_ad.py  config.py  deps.py  msal_client.py  security.py
apps/api/app/db/: base.py  purge_demo.py  seed.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_initial.py  0002_collections.py  0003_collection_parent.py  0004_version_assets.py  0005_user_msal_cache.py
apps/api/app/db/models/: __init__.py  ai.py  audit.py  collection.py  engagement.py  report.py  user.py
apps/api/app/routers/: admin.py  auth.py  collections.py  comments.py  dashboard.py  favorites.py  related.py  reports.py  search.py  taxonomy.py  users.py
apps/api/app/schemas/: collection.py  engagement.py  report.py  user.py
apps/api/app/services/: ai.py  html_sanitize.py  search.py  sharepoint.py  storage.py  taxonomy.py
apps/api/tests/: conftest.py  test_collections_api.py  test_html_sanitize.py  test_reports_api.py  test_security.py
apps/auth/: msal.py
apps/web/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
docs/: API.md  ER.md  PRD.md  TDD.md  deployment-guide.md  folder-structure.md  roadmap.md  wireframes.md
infra/docker/: Dockerfile.api  Dockerfile.web
infra/k8s/: 00-namespace.yaml  01-config.yaml  02-postgres.yaml  04-api.yaml  (+4 more)
(+34 files in other folders)
