[project]
name = "kelp-nexus-api"
version = "0.1.0"
description = "Kelp Nexus — Engineering Knowledge Portal API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "authlib>=1.3",
    "msal>=1.28",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "bleach[css]>=6.1",
    "beautifulsoup4>=4.12",
    "slugify>=0.0.1",
    "python-slugify>=8.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
